# kdevelop

./: .gitignore
debuggers/: CMakeLists.txt
debuggers/common/: CMakeLists.txt  dbgglobal.h  midebugger.cpp  midebuggerplugin.h  midebugjobs.cpp  midebugsession.cpp  midebugsession.h  miframestackmodel.cpp  mivariable.cpp  mivariable.h  mivariablecontroller.cpp
debuggers/common/mi/: micommand.cpp
debuggers/common/widgets/: debuggerconsoleview.cpp  debuggerconsoleview.h
debuggers/gdb/: CMakeLists.txt  debugsession.cpp  debugsession.h
debuggers/gdb/unittests/: test_gdb.cpp
debuggers/lldb/: CMakeLists.txt  TODO.txt  debuggerplugin.cpp  debuggerplugin.h  debugsession.cpp  debugsession.h  lldbcommand.cpp  lldbcommand.h  lldbdebugger.cpp  lldbdebugger.h  lldblauncher.cpp  lldblauncher.h
debuggers/lldb/controllers/: framestackmodel.cpp  framestackmodel.h  variable.cpp  variable.h  variablecontroller.cpp  variablecontroller.h
debuggers/lldb/unittests/: test_lldb.cpp  test_lldb.h  testhelper.cpp  testhelper.h
debuggers/lldb/unittests/debugees/: CMakeLists.txt  debugeeechoenv.cpp
debuggers/lldb/widgets/: lldbconfigpage.cpp  lldbconfigpage.ui
plugins/clang/: clangparsejob.cpp
plugins/clang/duchain/: clanghelpers.cpp
plugins/cmake/: cmakemanager.cpp  cmakeserverimportjob.cpp
plugins/custom-definesandincludes/compilerprovider/widget/: compilerswidget.cpp
